--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ repositories {
 }
 
 dependencies {
+    compileOnly 'org.mariadb.jdbc:mariadb-java-client:2.7.3'
     compileOnly 'org.spigotmc:spigot-api:1.18-R0.1-SNAPSHOT'
     compileOnly 'org.geysermc.floodgate:api:2.0-SNAPSHOT'
 }
